调取github接口读取issue列表

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   ],
   "homepage": "https://hugy1.github.io/my-front-end-blog/",
   "devDependencies": {
+    "axios": "^0.18.0",
     "gh-pages": "^2.0.1"
   },
   "jest": {
